commenting out database initialization in db Docker file

--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -5,7 +5,7 @@ ENV MYSQL_DATABASE=my-database
 ENV MYSQL_USER=my-user
 ENV MYSQL_PASSWORD=my-password
 
-COPY init.sql /docker-entrypoint-initdb.d/
+# COPY init.sql /docker-entrypoint-initdb.d/
 
 EXPOSE 3306
 
