--- a/employee_crud/requirements.txt
+++ b/employee_crud/requirements.txt
@@ -1,5 +1,5 @@
-Flask==2.2.3
-Flask_RESTful==0.3.10
-flask_sqlalchemy==3.0.5
-SQLAlchemy==2.0.4
+Flask
+Flask_RESTful
+flask_sqlalchemy
+SQLAlchemy
 cryptography
