add auth microservice update all requirements.txt files, add redit service to docker-compose

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -53,3 +53,19 @@ jobs:
       run: |
         docker build -t kry667/restful:users_employees_db ./db
         docker push kry667/restful:users_employees_db
+
+    - name: Build and push the auth service image
+      env:
+        MYSQL_HOST: ${{ secrets.MYSQL_HOST }}
+        MYSQL_USER: ${{ secrets.MYSQL_USER }}
+        MYSQL_PASSWORD: ${{ secrets.MYSQL_PASSWORD }}
+        MYSQL_DB: ${{ secrets.MYSQL_DB }}
+        SECRET_KEY: ${{ secrets.SECRET_KEY }}
+      run: |
+        docker build -t kry667/restful:project101-auth ./auth
+        docker push kry667/restful:project101-auth
+
+
+
+
+        
